# cognos-session-memory

./: .gitignore  README.md  mcp_server.py  pyproject.toml  requirements.txt  server.json
cognos_session_memory_mcp/: server.py
docs/: COMPACT_ALTERNATIVE.md  PAPER.md
src/: __init__.py  main.py  plan.py  trace_store.py  trust.py
tests/: test_trust.py
