[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognos-session-memory-mcp"
version = "0.1.0"
description = "MCP server for CognOS trust scoring and session trace storage"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Björn André Wikström", email = "bjorn@base76.se"}
]
requires-python = ">=3.10"
keywords = ["mcp", "cognos", "trust", "epistemic", "ai-safety", "session-memory"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/base76-research-lab/cognos-session-memory"
Repository = "https://github.com/base76-research-lab/cognos-session-memory"

[project.scripts]
cognos-session-memory-mcp = "cognos_session_memory_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["cognos_session_memory_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.mypy]
python_version = "3.10"
strict = true
